Add RunUnityTestsTool for executing Unity tests and enhance test result handling

--- a/Assets/Plugins/Loop4UnityMcpServer/Editor/Loop4UnityMcpServer.Editor.asmdef
+++ b/Assets/Plugins/Loop4UnityMcpServer/Editor/Loop4UnityMcpServer.Editor.asmdef
@@ -2,7 +2,9 @@
     "name": "LoopMcpServer",
     "rootNamespace": "",
     "references": [
-        "UniTask"
+        "UniTask",
+        "UnityEditor.TestRunner",
+        "UnityEngine.TestRunner"
     ],
     "includePlatforms": [
         "Editor"
