--- a/Assets/Plugins/Loop4UnityMcpServer/Tests/LoopMcpServer.Tests.asmdef
+++ b/Assets/Plugins/Loop4UnityMcpServer/Tests/LoopMcpServer.Tests.asmdef
@@ -3,7 +3,9 @@
     "rootNamespace": "LoopMcpServer.Tests",
     "references": [
         "LoopMcpServer",
-        "UniTask"
+        "UniTask",
+        "UnityEngine.TestRunner",
+        "UnityEditor.TestRunner"
     ],
     "includePlatforms": [
         "Editor"
